# NLP_nahiarhd

./: .gitignore  LICENSE  MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt  test_clean_hashtags.py  test_hashtag_debug.py  test_hashtag_fix.py  testing.ipynb
nahiarhdNLP/: __init__.py  demo.py  test_clean.py  test_package.py
nahiarhdNLP/datasets/: __init__.py  emoji.csv  loaders.py  slang.csv  stop_word.csv
nahiarhdNLP/mydatasets/: loaders.py
nahiarhdNLP/preprocessing/: __init__.py  main.py  test_pipeline.py  utils.py
nahiarhdNLP/preprocessing/cleaning/: spell_corrector.py  text_cleaner.py  text_cleaner_word.py  text_replace.py
nahiarhdNLP/preprocessing/cleaning/indonesia_spellchecker/: main.py  stemmer.py
nahiarhdNLP/preprocessing/linguistic/: stemmer.py  stopwords.py
nahiarhdNLP/preprocessing/normalization/: emoji.py  slang.py  spell_corrector.py
nahiarhdNLP/preprocessing/tokenization/: tokenizer.py
nahiarhdNLP/tests/: demo_features.py  test_pipeline.py
