[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nahiarhdNLP"
version = "1.4.5"
description = "Advanced Indonesian Natural Language Processing Library"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Raihan Hidayatullah Djunaedi", email = "raihanhd.dev@gmail.com"},
]
keywords = ["nlp", "indonesian", "natural-language-processing", "text-processing", "bahasa-indonesia"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=1.3.0",
    "sastrawi>=1.0.1",
    "rich>=12.0.0",
]

[project.urls]
Homepage = "https://example.com"
Documentation = "https://example.com"
Repository = "https://github.com/raihanhd12/nahiarhdNLP"
Issues = "https://github.com/raihanhd12/nahiarhdNLP/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=0.991",
    "pre-commit>=2.17.0",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.17.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nahiarhdNLP*"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.csv", "*.json", "*.md"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["nahiarhdNLP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=term-missing --cov-report=html"